# script_executor

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: run.launch
nodes/: script_executor
scripts/: example.bash  example_with_argument.bash  example_with_arguments.bash
src/script_executor/: script_executor.py
yaml/: scripts_configuration.yaml
